# WireWorld

./: Cargo.toml  README.md  grid.txt
src/: main.rs  wireworld.rs
web/: index.html
