[package]
name = "WireWorld"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "WireWorld"
path = "src/main.rs"

[lib]
name = "WireWorldWeb"
path = "src/main.rs"
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.32"
async-std = { version = "1.10.0", features = ["unstable"] }
nannou = { version="0.18.1", git ="https://github.com/nannou-org/nannou.git", rev = "287be8a4d075b17332ca0bf34649f5d25e751c00", features =["wasm-experimental"]}

[dependencies.web-sys]
version = "0.3.22"
features = ["console", "Request", "RequestInit", "Window", "RequestMode", "Response"]

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
# in debug mode.
[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"